--- a/TimesTables/src/index.css
+++ b/TimesTables/src/index.css
@@ -21,7 +21,10 @@ body {
   background-color: #213547;
 }
 
-
+html {
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
 a {
   font-weight: 500;
   color: #646cff;
